--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Unity Settings Management</title>
+    <title>Settings Management</title>
     <!--======CSS Dependencies======-->
     <!--Vendor-->
     <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.css"/>
